--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
             echo "Testing $dir"
             pkgs=$(go list "$dir/..." 2>/dev/null || true)
             if [ -n "$pkgs" ]; then
-              go test -race -coverprofile="$dir/coverage.txt" -covermode=atomic "$dir/..."
+              (cd "$dir" && go test -race -coverprofile="coverage.txt" -covermode=atomic "./...")
             else
               echo "No packages to test in $dir"
             fi
@@ -30,5 +30,5 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
-          fail_ci_if_error: true # optional (default = false)
-          files: ./i18n/coverage.txt",./assert/coverage.txt" # optiona
+          fail_ci_if_error: false # optional (default = false)
+          # files: ./i18n/coverage.txt",./assert/coverage.txt" # optiona
